[tool.poetry]
name = "hypothesis-grammar"
version = "0.1.0"
description = "A reverse-parser as a Hypotheses strategy: generate examples from an EBNF grammar"
authors = ["Anentropic <ego@anentropic.com>"]
classifiers = [
	"Development Status :: Pre-Alpha",
	"Programming Language  :: Python :: 3.7",
    "Framework :: Hypothesis",
]

[tool.poetry.dependencies]
python = ">=3.7"
hypothesis = "^5.8.0"
lark-parser = "^0.8.5"
inject = "^4.1.1"
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
ipython = "^7.13.0"
pytype = {version = "^2020.3.19", python = ">=3.6,<3.8"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
